--- a/example-smart-app/src/css/SOFCSS.css
+++ b/example-smart-app/src/css/SOFCSS.css
@@ -254,8 +254,8 @@ table#t02 td,th {
 		}
 		
 		#pat-header{
-		width: 100%;
-        height :100px;
+		max-width: 100%;
+        	height :100px;
 		background: linear-gradient(to bottom, #2F99D5 0%, #1169A8 100%);
 		color:white;
 		}
