--- a/example-smart-app/src/css/SOFCSS.css
+++ b/example-smart-app/src/css/SOFCSS.css
@@ -216,6 +216,9 @@ table#t02 td,th {
 			  #header1 {
 				font-size: 16px;
 			  }
+			  #pat-header{
+			width : 100%;
+				}
 			  .btn-submit {
 			  width:300px;
 			  }
@@ -234,15 +237,10 @@ table#t02 td,th {
 			}
 		#header1
 		{
-		
 		width: 100%;
        		height: 30px;
-		
-	
-		
 		text-align: left;
 		text-decoration: none;
-		
 		}
 		
 		#Content{
@@ -250,7 +248,6 @@ table#t02 td,th {
        		height: 400px;
 		font-size: 20px;
 		padding :40px;
-		
 		}
 		
 		#pat-header{
