--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -16,9 +16,9 @@
 
 	  
 	  
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../../lib/css/bootstrap.min.css">
 	
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+	  <link rel="stylesheet" href="../../../lib/css/font-awesome.min.css">  
 	  
 	   <!--
 	  <script src="https://code.highcharts.com/highcharts.js"></script>
