Changes for refactor

--- a/example-smart-app/src/views/patient/index.html
+++ b/example-smart-app/src/views/patient/index.html
@@ -2,29 +2,24 @@
 <html lang="en" hidden>
 
 <head>
-  <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge' />-->
-
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- Application-level javascript-->
-  <link rel="stylesheet" href="../../../src/css/SOFCSS.css">
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
+  <link rel="stylesheet" href="../../../src/css/SOFCSS.css">
+  <link rel="stylesheet" href="../../../lib/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../lib/css/font-awesome.min.css">  
+  <link rel='stylesheet' type='text/css' href='../../../lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
+  <link rel='stylesheet' type='text/css' href='../../css/example-smart-app.css'>
+
+       <!-- Application-level javascript-->
   <script src='../../js/example-smart-app.js'></script>
-  <script src='../../js/highchart.js'></script>
+  <script src='../../js/highcharts-more.js'></script>
+  <script src='../../js/highcharts.js'></script>
   <script src='../../js/hc_exporting.js'></script>
   <script src='../../js/jquery_min.js'></script>
   <script src='../../js/bootstrap_min.js'></script>
-
-
-
-  <link rel="stylesheet" href="../../../lib/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="../../../lib/css/font-awesome.min.css">
-
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
-  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>SMART APP</title>
   <link rel='stylesheet' type='text/css' href='../../css/example-smart-app.css'>
