changes in global.js

--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="../../../lib/css/font-awesome.min.css">  
     <link rel='stylesheet' type='text/css' href='../../../lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     <link rel='stylesheet' type='text/css' href='../../css/example-smart-app.css'>
-
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
     	   <!-- Application-level javascript-->
     <script src='../../js/example-smart-app.js'></script>
     <script src='../../js/highcharts-more.js'></script>
