--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -130,7 +130,7 @@
   		<svg style="height: 200px;"></svg>
 	</div> -->
 
-	<div id="chartmodal" class="modal">
+	<div id="chartmodal" class="modal" style="width: 80%;margin-left: 10%">
 
 		<div class="modal-content">
 			<span id="chartclose"class="close">&times;</span>
@@ -196,17 +196,6 @@
 	</div>
 	
 </section>
-	<script>
-		console.log("alllllllllllllll-------------------------"
-				+ document.querySelectorAll('*[id]'));
-
-		var i;
-		var myNodelist = document.querySelectorAll('*[id]');
-		for (i = 0; i < myNodelist.length; i++) {
-			console.log(i + "    " + myNodelist[i].id);
-
-		}
-	</script>
 	<script src='../../../src/js/global.js'></script>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <script src='../../../src/js/polyfill.js'></script>
