--- a/example-smart-app/src/views/patient/index.html
+++ b/example-smart-app/src/views/patient/index.html
@@ -16,6 +16,7 @@
        <!-- Application-level javascript-->
   <script src='../../js/example-smart-app.js'></script>
   <script src='../../js/hc_exporting.js'></script>
+  <script src='../../js/highcharts.js'></script>
   <script src='../../js/jquery_min.js'></script>
   <script src='../../js/bootstrap_min.js'></script>
 
