Changes for Hide banner and fhir api's

--- a/example-smart-app/src/views/patient/index.html
+++ b/example-smart-app/src/views/patient/index.html
@@ -15,8 +15,6 @@
 
        <!-- Application-level javascript-->
   <script src='../../js/example-smart-app.js'></script>
-  <script src='../../js/hc_exporting.js'></script>
-  <script src='../../js/highcharts.js'></script>
   <script src='../../js/jquery_min.js'></script>
   <script src='../../js/bootstrap_min.js'></script>
 
@@ -95,6 +93,7 @@
 
   </section>
   <script src='../../../src/js/global.js'></script>
+  <script src='../../../src/js/quetion_answer.js'></script>
   <!-- Required JS files to enable this page to embed within an MPage -->
 
   <script src='../../../src/js/polyfill.js'></script>
