--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -22,8 +22,6 @@
 	<script src='../../js/nv.d3.js'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!-- <script src='../../js/jquery_min.js'></script> -->
-	<script src='../../js/highcharts.js'></script>
-	<script src='../../js/hc_exporting.js'></script>
 	<script src='../../js/bootstrap_min.js'></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
@@ -56,7 +54,7 @@
 </header>
 
 <section hidden id = "doctor-view">
-	<nav>  
+	<nav id="istopFrame">  
 	<div class="icon-bar01">
 		<span  style="margin-left:0.7em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
 	</div>
@@ -196,6 +194,7 @@
 	
 </section>
 	<script src='../../../src/js/global.js'></script>
+	<script src='../../../src/js/quetion_answer.js'></script>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <script src='../../../src/js/polyfill.js'></script>
     <script src='../../../lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
