--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -2,7 +2,11 @@
 <html lang="en" hidden>
 <head>
 	<title>SMART APP</title> 
-	 
+	<style>
+	input::-webkit-calendar-picker-indicator {
+			opacity: 100;
+		 }
+	</style> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
@@ -138,17 +142,21 @@
 	</div>
 	  
 	<article id="docview-article">
-		<div class="icon-bar">
+		<div class="icon-bar" hidden id="docview-article-div">
 			<span>&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-left"></i><span>&nbsp;&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-right "></i>&nbsp;&nbsp; <i style=" font-size: 7px; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i><span id="v1"></span>&nbsp;&nbsp; <i class="glyphicon glyphicon-home white"></i> <span style="margin-left:0.5em; font-color:#FFFFFF; font-size:20px;"> Order PRO</span><img border="0" style="margin-bottom:0.2em;margin-left:40em;" src="../../../src/images/pixel-full-screen.png"  />&nbsp;Fullscreen&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-print white"></i>&nbsp;  Print&nbsp; &nbsp; <i class="glyphicon glyphicon-refresh white"></i><span> &nbsp;2 minutes ago &nbsp; </span>
 		</div>
   		<h3 style="margin-left:0.5em;">Order a new PRO</h3>
 	
 		<div style="position:relative;width:200px;height:25px;border:0;padding:0;margin:0;">
-			<select id="selectform"  style="position:absolute;top:0px;left:0px;width:400px; height:25px;line-height:20px;margin-left:1em;padding:0;">
-			<option value="" disabled selected >Please choose an instrument...</option>
-			 
+		    	<input id="selectinput" type="text" list="selectform">
+  				<datalist id="selectform">
+    			<option value=""  disabled selected ></option>
+				</datalist> 
+
+			<!-- <select id="selectform"  style="position:absolute;top:0px;left:0px;width:400px; height:25px;line-height:20px;margin-left:1em;padding:0;">
+			<option value="" disabled selected >Please choose an instrument...</option></option>			 
 			</select>
-			<br/> <br/>
+			<br/> <br/>  -->
 			<button class="button button3" style="margin-left:1em;" type="button" onclick="order_func();">Order</button>
 		</div>
 	    <br/><br/><br/>
