Changes for offline js and css

--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -15,8 +15,8 @@
   	
 	  	   <!-- Application-level javascript-->
 	<link rel="stylesheet" href="../../../src/css/SOFCSS.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='../../css/example-smart-app.css'>
 	<link rel='stylesheet' type='text/css' href='../../../lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
 	<link rel="stylesheet" href="../../../src/css/nv.d3.css">
@@ -24,11 +24,9 @@
 	<script src='../../js/example-smart-app.js'></script>
 	<script src='../../js/d3.v3.min.js'></script>
 	<script src='../../js/nv.d3.js'></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="../../js/jquery.min.js"></script>
 	<!-- <script src='../../js/jquery_min.js'></script> -->
-	<script src='../../js/bootstrap_min.js'></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+	<script src='../../js/bootstrap_min.js'></script>	
 	
 </head>
 <body>
