commit for undefined objects

--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -21,10 +21,13 @@
 	<link rel='stylesheet' type='text/css' href='../../../lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
 	<link rel="stylesheet" href="../../../src/css/nv.d3.css">
 	
-	<script src='../../js/example-smart-app.js'></script>
-	<script src='../../js/d3.v3.min.js'></script>
-	<script src='../../js/nv.d3.js'></script>
 	<script src="../../js/jquery.min.js"></script>
+	<script src='../../js/example-smart-app.js'></script>
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src='../../js/d3.v3.min.js'></script>
+	<script src="https://d3js.org/d3-time.v1.min.js"></script>
+	<script src="https://d3js.org/d3-time-format.v2.min.js"></script>
+	<script src='../../js/nv.d3.js'></script>
 	<!-- <script src='../../js/jquery_min.js'></script> -->
 	<script src='../../js/bootstrap_min.js'></script>	
 	
