--- a/example-smart-app/src/css/tab.css
+++ b/example-smart-app/src/css/tab.css
@@ -44,7 +44,7 @@ li.active a, li.active a:hover {
 	padding:3px;
 	border-radius:3px;
 	box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
-	background:#fff;
+	background:aliceblue;
 }
 
 .tab {
