--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -153,7 +153,7 @@
   				<datalist id="selectform">
     			<option value=""  disabled selected ></option>
 				</datalist> 
-			<button id="submitButton" class="button button3"  type="button" onclick="order_func();" disabled>Order</button>
+			<button id="myBtn" class="button button3"  type="button" >Order</button>
 		</div>
 		<!-- End of creation combo-box with datalist.. -->
 
