--- a/example-smart-app/src/views/patient/index.html
+++ b/example-smart-app/src/views/patient/index.html
@@ -31,14 +31,14 @@
     <div class="row">
       <div class="column">
 
-        <h4 style="margin-left:1.5em;"><b><span id='lname'></span>, <span id='fname'></span></b></h4>
+        <h4 style="margin-left:1.5em;"><strong><span id='lname'></span>, <span id='fname'></span></strong></h4>
         <h4 style="margin-left:1.5em;">LOC:USC-GI;200;Q </h4>
         <h4 style="margin-left:1.5em;">Observation[Admit Dt:8/3/2018 6:07..</h4>
       </div>
       <div class="column">
 
         <h4><span>Age: </span><span id='age'></h4>
-        <h4><b>D.O.B: </b><span id='birthdate'></span></h4>
+        <h4><strong>D.O.B: </strong><span id='birthdate'></span></h4>
         <h4><span id='pract_name'></span></h4>
 
       </div>
@@ -66,8 +66,8 @@
       <div class="row">
         <div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
           </br>
-          <P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <b> <span id='firstname'></span> <span
-                id='lastname'></span></b>!</P></br></br>
+          <P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <strong> <span id='firstname'></span> <span
+                id='lastname'></span></strong>!</P></br></br>
         </div>
       </div>
       <div id="list">
@@ -78,7 +78,7 @@
     <div hidden id="Ques" class="container-fluid">
       <div class="row" style="text-align: left; padding-top: 20px; font-size: 14px;">
         <div id="header1" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <p style='margin-left:1em;'><b>Questionnaire for <span id='pro-name'></span></b></p>
+          <p style='margin-left:1em;'><strong>Questionnaire for <span id='pro-name'></span></strong></p>
           </br>
           </br>
         </div>
