--- a/example-smart-app/src/views/provider/index.html
+++ b/example-smart-app/src/views/provider/index.html
@@ -38,13 +38,13 @@
 <header hidden id = "doctor-view-head">
 	<div class="row">
 		<div class="column" >
-	    	<h4 style="margin-left:1.5em;"><b><span id='lname'></span>, <span id='fname'></span></b></h4>
+	    	<h4 style="margin-left:1.5em;"><strong><span id='lname'></span>, <span id='fname'></span></strong></h4>
 			<h4 style="margin-left:1.5em;">LOC:USC-GI;200;Q </h4>
 			<h4 style="margin-left:1.5em;">Observation[Admit Dt:8/3/2018 6:07..</h4>
 	  	</div>
 	  	<div class="column" >
 			<h4><span>Age: </span><span id='age'></span></h4>
-			<h4><b>D.O.B: </b><span id='birthdate'></span></h4>
+			<h4><strong>D.O.B: </strong><span id='birthdate'></span></h4>
 			<h4><span id='pract_name'></span></h4>
 		</div>
 	  	<div class="column" >
@@ -61,7 +61,7 @@
 <section hidden id = "doctor-view">
 	<nav id="istopFrame">  
 	<div class="icon-bar01">
-		<span  style="margin-left:0.7em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
+		<span  style="margin-left:0.7em;" >Menu - All</span><em style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></em>
 	</div>
 	<table id="t01" class="table">
     
@@ -88,7 +88,7 @@
 				<td>Orders</td>
 			</tr>
 			<tr id="protab">
-				<td><b>Order PRO</b></td>
+				<td><strong>Order PRO</strong></td>
 			</tr>
 			<tr>
 				<td>Medication List</td>
@@ -143,7 +143,7 @@
 	  
 	<article id="docview-article" style="background-color: aliceblue;">
 		<div class="icon-bar" hidden id="docview-article-div">
-			<span>&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-left"></i><span>&nbsp;&nbsp; </span><i style="color:#407798" class="glyphicon glyphicon-chevron-right "></i>&nbsp;&nbsp; <i style=" font-size: 7px; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i><span id="v1"></span>&nbsp;&nbsp; <i class="glyphicon glyphicon-home white"></i> <span style="margin-left:0.5em; font-color:#FFFFFF; font-size:20px;"> Order PRO</span><img border="0" style="margin-bottom:0.2em;margin-left:40em;" src="../../../src/images/pixel-full-screen.png"  />&nbsp;Fullscreen&nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-print white"></i>&nbsp;  Print&nbsp; &nbsp; <i class="glyphicon glyphicon-refresh white"></i><span> &nbsp;2 minutes ago &nbsp; </span>
+			<span>&nbsp; </span><em style="color:#407798" class="glyphicon glyphicon-chevron-left"></em><span>&nbsp;&nbsp; </span><em style="color:#407798" class="glyphicon glyphicon-chevron-right "></em>&nbsp;&nbsp; <em style=" font-size: 7px; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></em><span id="v1"></span>&nbsp;&nbsp; <em class="glyphicon glyphicon-home white"></em> <span style="margin-left:0.5em; font-color:#FFFFFF; font-size:20px;"> Order PRO</span><img border="0" style="margin-bottom:0.2em;margin-left:40em;" src="../../../src/images/pixel-full-screen.png" alt="Image for full screen"  />&nbsp;Fullscreen&nbsp;&nbsp;&nbsp;<em class="glyphicon glyphicon-print white"></em>&nbsp;  Print&nbsp; &nbsp; <em class="glyphicon glyphicon-refresh white"></em><span> &nbsp;2 minutes ago &nbsp; </span>
 		</div>
 	<div>
 		<h3>Order a new PRO</h3>
@@ -205,7 +205,7 @@
 		<div class="row">
 			<div id="pat-header" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 " >
 			</br>
-			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <b> <span id='firstname'></span> <span id='lastname'></span></b>!</P></br></br>			
+			<P style="margin-left:1em; text-align: left; font-size: 28px;">Welcome <strong> <span id='firstname'></span> <span id='lastname'></span></strong>!</P></br></br>			
 			</div>
 		</div>	
 		<div id="list">
@@ -216,7 +216,7 @@
 	<div hidden id="Ques" class="container-fluid">
 		<div class="row"  style="text-align: left; padding-top: 20px; font-size: 14px;">
 			<div id="header1"  class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			 <p style='margin-left:1em;'><b>Questionnaire for <span id='pro-name'></span></b></p>
+			 <p style='margin-left:1em;'><strong>Questionnaire for <span id='pro-name'></span></strong></p>
 				</br> </br>
 			</div>
 		</div>
